/**
 * @ File name: Place.java
 * @ Author1: Danilo Silva 113384
 * @ Author2: Tomás Fernandes 112981
 * @ Modified time: 2024-04-05 12:54:56
 */

package lab06.movie;

public class Place {
    private String location;

    public Place(String location) {this.location = location;}

    public String getLocation() {return this.location;}
}
